--- a/engine.cfg
+++ b/engine.cfg
@@ -1,12 +1,8 @@
-; Engine configuration file.
-; It's best to edit using the editor UI, not directly,
-; becausethe parameters that go here are not obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
+
 name="LudumDareApr16"
 icon="res://icon.png"
+
+[autoload]
+
+shape_manager="*res://scripts/shape_manager.gd"
