--- a/engine.cfg
+++ b/engine.cfg
@@ -5,4 +5,5 @@ icon="res://icon.png"
 
 [autoload]
 
+input_manager="*res://scripts/input_manager.gd"
 shape_manager="*res://scripts/shape_manager.gd"
